bootstrap/03-argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio

  listeners:
    - name: https
      protocol: HTTPS
      port: 443

      hostname: "*.chungndinh.com"

      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: chungndinh-com-wildcard-tls

      allowedRoutes:
        namespaces:
          from: All
