bootstrap/03-argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-ingress
      sectionName: https

  hostnames:
    - argocd.chungndinh.com

  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
